--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /data/processed
 /crawler/__pycache__
 /crawler/utils/__pycache__
+/logs
+indexer/inverted_index.pkl
+logs/latest.log
+indexer/tfidf_index.pkl
